--- a/css/style.css
+++ b/css/style.css
@@ -1,67 +1,135 @@
 body {
-  font-family: sans-serif;
-  background-color: #DEDEDE;
-  color: #333;
-  padding: 20px 0 28px 0;
-  margin: 0;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
+	font-family: sans-serif;
+	background-color: #DEDEDE;
+	color: #333;
+	padding: 20px 0 28px 0;
+	margin: 0;
 }
 
 .app-title {
-  text-align: center;
-  font-weight: normal;
-  font-size: 2.6rem;
+	text-align: center;
+	font-weight: normal;
+	font-size: 2.6rem;
 }
 
 .event {
-  max-width: 80vw;
-  padding: 20px;
-  margin: 30px auto;
-  background-color: #FFF;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, .1);
-  overflow: hidden;
+	max-width: 80vw;
+	padding: 20px;
+	margin: 30px auto;
+	background-color: #FFF;
+	box-shadow: 3px 3px 3px rgba(0, 0, 0, .1);
+	overflow: hidden;
 }
 
 .event h4 {
-  margin: 0 0 6px 0;
+	margin: 0 0 6px 0;
 }
 
 .event-photo {
-  float: left;
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  margin-right: 15px;
+	cursor: pointer;
+	float: left;
+	width: 200px;
+	height: 200px;
+	object-fit: cover;
+	margin-right: 15px;
 }
 
+.event-photo:hover {opacity: 0.7;}
+
 .event-name {
-  font-size: 2rem;
-  font-weight: normal;
-  margin: 0 0 1rem 0;
+	font-size: 2rem;
+	font-weight: normal;
+	margin: 0 0 1rem 0;
 }
 
 .species {
-  font-size: .9rem;
-  color: #888;
-  vertical-align: middle;
+	font-size: .9rem;
+	color: #888;
+	vertical-align: middle;
 }
 
 .foods-list {
-  margin: 0;
-  padding: 0;
-  position: relative;
-  left: 17px;
-  font-size: .85rem;
-  line-height: 1.5;
+	margin: 0;
+	padding: 0;
+	position: relative;
+	left: 17px;
+	font-size: .85rem;
+	line-height: 1.5;
 }
 
 .footer {
-  font-size: .7rem;
-  color: #888;
-  text-align: center;
-  margin: 0;
+	font-size: .7rem;
+	color: #888;
+	text-align: center;
+	margin: 0;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 30px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (Image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+.caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+}
+
+/* Add Animation - Zoom in the Modal */
+.modal-content, .caption { 
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
+    }
 }
