--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,37 @@ body {
         width: 100%;
     }
 }
+
+@media only screen and (max-width: 400px){
+	h2 {
+		font-size: 20px;
+	}
+
+	.event-photo {
+		width: 100px;
+		height: 100px;
+		object-fit: cover;
+		margin-right: 15px;
+	}
+
+	.event-name {
+		font-size: 16px;
+		font-weight: bolder;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		/*margin: 0 0 1rem 0;*/
+	}
+
+	p {
+		margin: 5px 0;
+		font-weight: lighter;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+
+	.event strong {
+		display: none;
+	}
+}
