--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,11 @@ body {
 	font-family: sans-serif;
 	background-color: #DEDEDE;
 	color: #333;
-	padding: 20px 0 28px 0;
+	margin: 0;
+}
+
+h1 {
+	padding: 10px 0 0 0;
 	margin: 0;
 }
 
@@ -14,8 +18,7 @@ body {
 /* Style the tab */
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color: #ccc;
 }
 
 /* Style the buttons inside the tab */
@@ -32,12 +35,12 @@ body {
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-    background-color: #ddd;
+    background-color: #f1f1f1;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-    background-color: #ccc;
+    background-color: #F0F0F0;
 }
 
 /* Style the tab content */
@@ -177,8 +180,9 @@ body {
 }
 
 @media only screen and (max-width: 400px){
-	h2 {
+	.app-title {
 		font-size: 20px;
+		font-weight: bold;
 	}
 
 	.event-photo {
