--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ h1 {
     max-width: 700px;
     text-align: center;
     color: #ccc;
-    padding: 10px 0;
+    padding: 10px 0 40px 0;
 }
 
 /* Add Animation - Zoom in the Modal */
